--- a/config
+++ b/config
@@ -11,7 +11,6 @@
 
 set $mod Mod4
 
-set $mod_alt    Mod5
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -53,10 +52,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -75,8 +74,8 @@ bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+t layout tabbed
+bindsym $mod+y layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -90,56 +89,27 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $screen_left  DVI-0
-set $screen_right DVI-1
-
-
-# workspace monitor bindings
-workspace 1 output  $screen_left
-workspace 2 output  $screen_left
-workspace 3 output  $screen_left
-workspace 4 output  $screen_left
-workspace 5 output  $screen_left
-workspace 6 output  $screen_left
-workspace 7 output  $screen_left
-workspace 8 output  $screen_left
-workspace 9 output  $screen_left
-workspace 10 output $screen_left
-
-# second vga monitor
-workspace 11 output $screen_right
-workspace 12 output $screen_right
-workspace 13 output $screen_right
-workspace 14 output $screen_right
-workspace 15 output $screen_right
-workspace 16 output $screen_right
-workspace 17 output $screen_right
-workspace 18 output $screen_right
-workspace 19 output $screen_right
-workspace 20 output $screen_right
-
 # switch to workspace
-bindsym $mod+1 workspace  1
-bindsym $mod+2 workspace  2
-bindsym $mod+3 workspace  3
-bindsym $mod+4 workspace  4
-bindsym $mod+5 workspace  5
-bindsym $mod+6 workspace  6
-bindsym $mod+7 workspace  7
-bindsym $mod+8 workspace  8
-bindsym $mod+9 workspace  9
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
-bindsym $mod_alt+1 workspace 11
-bindsym $mod_alt+2 workspace 12
-bindsym $mod_alt+3 workspace 13
-bindsym $mod_alt+4 workspace 14
-bindsym $mod_alt+5 workspace 15
-bindsym $mod_alt+6 workspace 16
-bindsym $mod_alt+7 workspace 17
-bindsym $mod_alt+8 workspace 18
-bindsym $mod_alt+9 workspace 19
-bindsym $mod_alt+0 workspace 20
+bindsym $mod+q workspace 5
+bindsym $mod+w workspace 6
+bindsym $mod+e workspace 7
+bindsym $mod+r workspace 8
+
+bindsym $mod+F1 workspace 5
+bindsym $mod+F2 workspace 6
+bindsym $mod+F3 workspace 7
+bindsym $mod+F4 workspace 8
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -153,17 +123,6 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-bindsym $mod_alt+Shift+1 move container to workspace 11
-bindsym $mod_alt+Shift+2 move container to workspace 12
-bindsym $mod_alt+Shift+3 move container to workspace 13
-bindsym $mod_alt+Shift+4 move container to workspace 14
-bindsym $mod_alt+Shift+5 move container to workspace 15
-bindsym $mod_alt+Shift+6 move container to workspace 16
-bindsym $mod_alt+Shift+7 move container to workspace 17
-bindsym $mod_alt+Shift+8 move container to workspace 18
-bindsym $mod_alt+Shift+9 move container to workspace 19
-bindsym $mod_alt+Shift+0 move container to workspace 20
-#
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -195,7 +154,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $mod+u mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -207,9 +166,8 @@ bar {
 #middle button on title bar kill
 bindsym --release button2 kill
 
-
 #shutdown code:
-bindsym $mod+F12 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Suspend" boolean:true
+bindsym $mod+F12 exec i3lock
 
 bindsym $mod+F10 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
 
