--- a/config
+++ b/config
@@ -29,11 +29,21 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
+# Python shortcut
+bindsym $mod+p exec i3-sensible-terminal -e "ipython"
+
+# File manager: ranger 
+bindsym $mod+BackSpace exec i3-sensible-terminal -e ranger
+
+# Chrome shortcut:
+bindsym $mod+F1 exec google-chrome-stable
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+e exec dmenu_run
+bindsym $mod+grave exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -64,30 +74,33 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+g split h
+bindsym $mod+g split g
 
 # split in vertical orientation
 bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen
+bindsym $mod+space fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+bindsym $mod+y layout stacking
 bindsym $mod+t layout tabbed
-bindsym $mod+y layout toggle split
+bindsym $mod+u layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+#bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym $mod+o focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
+
+bindsym $mod+Tab workspace back_and_forth
+
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -95,40 +108,49 @@ bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
 
-bindsym $mod+q workspace 5
-bindsym $mod+w workspace 6
-bindsym $mod+e workspace 7
-bindsym $mod+r workspace 8
+bindsym $mod+a workspace a
+bindsym $mod+s workspace s
+bindsym $mod+d workspace d
+bindsym $mod+f workspace f
 
-bindsym $mod+F1 workspace 5
-bindsym $mod+F2 workspace 6
-bindsym $mod+F3 workspace 7
-bindsym $mod+F4 workspace 8
-
-# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
 bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+a move container to workspace a
+bindsym $mod+Shift+s move container to workspace s
+bindsym $mod+Shift+d move container to workspace d
+bindsym $mod+Shift+f move container to workspace f
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+
+# Home layout:
+set $screen_left DVI-0
+set $screen_right DVI-1
+
+workspace 1 output $screen_left
+workspace 2 output $screen_left
+workspace 3 output $screen_left
+workspace 4 output $screen_left
+workspace 5 output $screen_left
+
+workspace a output $screen_right
+workspace s output $screen_right
+workspace d output $screen_right
+workspace f output $screen_right
+workspace 9 output $screen_right
+
+# Home startup:
+exec --no-startup-id i3-msg 'workspace 1:; exec /usr/bin/google-chrome'
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -154,7 +176,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+u mode "resize"
+bindsym $mod+z mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -166,8 +188,14 @@ bar {
 #middle button on title bar kill
 bindsym --release button2 kill
 
+
 #shutdown code:
-bindsym $mod+F12 exec i3lock
+#bindsym $mod+F12 exec i3lock
+bindsym $mod+F12 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Suspend" boolean:true
 
 bindsym $mod+F10 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
+
+# Experimental locking screens
+#exec --no-startup-id xset dpms 600
+#exec --no-startup-id xautolock -time 30 -locker i3lock
 
