--- a/config
+++ b/config
@@ -32,11 +32,12 @@ bindsym $mod+Return exec i3-sensible-terminal
 # Python shortcut
 bindsym $mod+p exec i3-sensible-terminal -e "ipython"
 
-# File manager: ranger 
+# File manager: ranger
 bindsym $mod+BackSpace exec i3-sensible-terminal -e ranger
 
 # Chrome shortcut:
-bindsym $mod+F1 exec google-chrome-stable
+#bindsym $mod+F1 exec google-chrome-stable
+bindsym $mod+F1 exec firefox
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -74,7 +75,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+g split g
+bindsym $mod+g split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -129,8 +130,8 @@ bindsym $mod+Shift+9 move container to workspace number 9
 #set $screen_right DVI-1
 
 # work layout
-set $screen_right HDMI1
-set $screen_left VGA1
+set $screen_right HDMI2
+set $screen_left HDMI3
 
 workspace 1 output $screen_left
 workspace 2 output $screen_left
@@ -148,8 +149,6 @@ workspace 9 output $screen_right
 #exec --no-startup-id i3-msg 'workspace f; exec /usr/bin/google-chrome'
 
 # Work startup:
-exec --no-startup-id i3-msg 'workspace 5; exec i/usr/bin/google-chrome'
-exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/google-chrome'
 exec --no-startup-id i3-msg 'workspace 6; exec i3-sensible-terminal'
 
 # reload the configuration file
@@ -170,7 +169,7 @@ mode "resize" {
         bindsym h resize shrink width 10 px or 10 ppt
         bindsym j resize grow height 10 px or 10 ppt
         bindsym k resize shrink height 10 px or 10 ppt
-        bindsym lresize grow width 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -185,11 +184,6 @@ mode "resize" {
 
 bindsym $mod+z mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3blocks
-}
 
 # custom:
 #middle button on title bar kill
@@ -199,9 +193,17 @@ bindsym --release button2 kill
 #shutdown code:
 bindsym $mod+F12 exec i3lock
 #bindsym $mod+F12 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Suspend" boolean:true
-#bindsym $mod+F11 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
+bindsym $mod+Shift+F10 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
+
 bindsym $mod+F4 exec --no-startup-id "systemctl hibernate"
 
-exec --no-startup-id xset dpms 600 
+# Experimental locking screens
+exec --no-startup-id xset dpms 600
 exec --no-startup-id xautolock -time 300 -locker i3lock
 
+
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
+bar {
+        status_command i3blocks
+}
