Home config: F12 to suspend

--- a/config
+++ b/config
@@ -110,8 +110,8 @@ bindsym $mod+s workspace s
 bindsym $mod+d workspace d
 bindsym $mod+f workspace f
 
-set $screen_right DP-1
-set $screen_left DP-2
+set $screen_right DP-2
+set $screen_left DP-1
 
 workspace 1 output $screen_left
 workspace 2 output $screen_left
@@ -149,7 +149,6 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-bindsym $mod+F12 exec --no-startup-id  i3lock -c 111111 -p win -f
 bindsym $mod+Print exec --no-startup-id  i3lock -c 111111 -p win -f
 
 # resize window (you can also use the mouse for that)
@@ -193,8 +192,10 @@ exec xautolock -time 5 -locker '~/.config/i3/locker.sh'
 
 #exec --no-startup-id i3lock -c 111111 -p win -f
 
-
-bindsym $mod+F10 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
+#shutdown code:
+# bindsym $mod+F12 exec --no-startup-id  i3lock -c 111111 -p win -f
+bindsym $mod+F12 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Suspend" boolean:true
+bindsym $mod+Shift+F10 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
 
 
 # For status bar:
