--- a/config
+++ b/config
@@ -108,41 +108,56 @@ bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
 
-bindsym $mod+a workspace number 5
-bindsym $mod+s workspace number 6
-bindsym $mod+d workspace number 7
-bindsym $mod+f workspace number 8
+bindsym $mod+a workspace a
+bindsym $mod+s workspace s
+bindsym $mod+d workspace d
+bindsym $mod+f workspace f
+workspace 1 output $screen_left
+workspace 2 output $screen_left
+workspace 3 output $screen_left
+workspace 4 output $screen_left
+workspace 5 output $screen_left
 
+workspace a output $screen_right
+workspace s output $screen_right
+workspace d output $screen_right
+workspace f output $screen_right
+workspace 9 output $screen_right
+
+# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
 bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+a move container to workspace number 5
-bindsym $mod+Shift+s move container to workspace number 6
-bindsym $mod+Shift+d move container to workspace number 7
-bindsym $mod+Shift+f move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+a move container to workspace a
+bindsym $mod+Shift+s move container to workspace s
+bindsym $mod+Shift+d move container to workspace d
+bindsym $mod+Shift+f move container to workspace f
+
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
+
 
 # Home layout:
 #set $screen_left DVI-0
 #set $screen_right DVI-1
 
 # work layout
-set $screen_right HDMI2
-set $screen_left HDMI3
+set $screen_right DP-1
+set $screen_left DP-2
 
-workspace 1 output $screen_left
-workspace 2 output $screen_left
-workspace 3 output $screen_left
-workspace 4 output $screen_left
 
-workspace 5 output $screen_right
-workspace 6 output $screen_right
-workspace 7 output $screen_right
-workspace 8 output $screen_right
-workspace 9 output $screen_right
 
 # Home startup:
 #exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/google-chrome'
@@ -196,6 +211,9 @@ bindsym $mod+F10 exec --no-startup-id dbus-send --system --print-reply --dest=or
 # Experimental locking screens
 exec --no-startup-id xset dpms 600
 exec --no-startup-id xautolock -time 300 -locker i3lock
+exec xautolock -time 5 -locker '~/.config/i3/locker.sh'
+
+bindsym $mod+grave exec dmenu_run
 
 
 # Start i3bar to display a workspace bar (plus the system information i3status
