--- a/config
+++ b/config
@@ -8,14 +8,19 @@
 # i3 config file (v4)
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
+exec –no-startup-id "xrandr --auto --output DP-1 --primary --right-of DP-2"
+
 
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
+font pango:monospace 8
+
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+#font pango:DejaVu Sans Mono 8
+
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -29,32 +34,21 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
-# Python shortcut
-bindsym $mod+p exec i3-sensible-terminal -e "ipython"
-
-# File manager: ranger
-bindsym $mod+BackSpace exec i3-sensible-terminal -e ranger
-
-# Chrome shortcut:
-#bindsym $mod+F1 exec google-chrome-stable
-bindsym $mod+F1 exec firefox
-
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+e exec dmenu_run
-bindsym $mod+grave exec dmenu_run
+#bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $mod+j focus left
+bindsym $mod+k focus down
+bindsym $mod+l focus up
+bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -75,33 +69,29 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+g split h
+bindsym $mod+h split h
 
 # split in vertical orientation
 bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+space fullscreen
+#bindsym $mod+f fullscreen toggle
+bindsym $mod+space fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+y layout stacking
-bindsym $mod+t layout tabbed
-bindsym $mod+u layout toggle split
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-#bindsym $mod+space focus mode_toggle
+# bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+o focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
-
-bindsym $mod+Tab workspace back_and_forth
-
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -119,6 +109,10 @@ bindsym $mod+a workspace a
 bindsym $mod+s workspace s
 bindsym $mod+d workspace d
 bindsym $mod+f workspace f
+
+set $screen_right DP-1
+set $screen_left DP-2
+
 workspace 1 output $screen_left
 workspace 2 output $screen_left
 workspace 3 output $screen_left
@@ -148,26 +142,15 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-
-# Home layout:
-#set $screen_left DVI-0
-#set $screen_right DVI-1
-
-# work layout
-set $screen_right DP-1
-set $screen_left DP-2
-
-
-
-# Home startup:
-#exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/google-chrome'
-
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+bindsym $mod+F12 exec --no-startup-id  i3lock -c 111111 -p win -f
+bindsym $mod+Print exec --no-startup-id  i3lock -c 111111 -p win -f
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -193,31 +176,31 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+z mode "resize"
-
+bindsym $mod+r mode "resize"
 
 # custom:
 #middle button on title bar kill
 bindsym --release button2 kill
 
+bindsym $mod+grave exec dmenu_run
 
-#shutdown code:
-bindsym $mod+F12 exec i3lock
-#bindsym $mod+F12 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Suspend" boolean:true
-bindsym $mod+Shift+F10 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
+bindsym $mod+F1 exec firefox
+
+# Shutdown screen after 5 mins
+# exec --no-startup-id xset dpms 300
+
+exec xautolock -time 5 -locker '~/.config/i3/locker.sh'
+
+#exec --no-startup-id i3lock -c 111111 -p win -f
+
 
 bindsym $mod+F10 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
 
-# Experimental locking screens
-exec --no-startup-id xset dpms 600
-exec --no-startup-id xautolock -time 300 -locker i3lock
-exec xautolock -time 5 -locker '~/.config/i3/locker.sh'
 
-bindsym $mod+grave exec dmenu_run
+# For status bar:
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+10 i3blocks
+bindsym --release Num_Lock exec pkill -SIGRTMIN+10 i3blocks
 
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
 bar {
-        status_command i3blocks
+  status_command i3blocks
 }
