--- a/config
+++ b/config
@@ -8,14 +8,15 @@
 # i3 config file (v4)
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
-exec –no-startup-id "xrandr --auto --output DP-1 --primary --right-of DP-2"
+# exec –no-startup-id "xrandr --auto --output DP-1 --primary --right-of DP-2"
 
 
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 12, Awesome 12
+#font pango:DejaVu Sans Mono, Awesome 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -160,16 +161,16 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 6 ppt
+        bindsym j resize grow height 10 px or 6 ppt
+        bindsym k resize shrink height 10 px or 6 ppt
+        bindsym l resize grow width 10 px or 6 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym Left resize shrink width 10 px or 6 ppt
+        bindsym Down resize grow height 10 px or 6 ppt
+        bindsym Up resize shrink height 10 px or 6 ppt
+        bindsym Right resize grow width 10 px or 6 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -186,12 +187,7 @@ bindsym $mod+grave exec dmenu_run
 
 bindsym $mod+F1 exec firefox
 
-# Shutdown screen after 5 mins
-# exec --no-startup-id xset dpms 300
-
 exec xautolock -time 5 -locker '~/.config/i3/locker.sh'
-
-#exec --no-startup-id i3lock -c 111111 -p win -f
 
 
 bindsym $mod+F10 exec --no-startup-id dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
@@ -203,4 +199,6 @@ bindsym --release Num_Lock exec pkill -SIGRTMIN+10 i3blocks
 
 bar {
   status_command i3blocks
+  font pango: FontAwesome 10
 }
+
