--- a/config
+++ b/config
@@ -151,7 +151,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 bindsym $mod+F12 exec --no-startup-id  i3lock -c 111111 -p win -f
-bindsym $mod+Print exec --no-startup-id  i3lock -c 111111 -p win -f
+bindsym $mod+Shift+o exec --no-startup-id  i3lock -c 111111 -p win -f
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
